chore: Update language files and remove unnecessary components

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,4 +1,4 @@
 {
-  "title": "Hello world",
-  "variable-example": "Using a variable {{count}}"
+  "welcome": "Welcome to our website!",
+  "hello": "Hello {{name}}!"
 }
